# fapiao-print

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_WIKI.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.trae/documents/: pdf-loading-failure-analysis.md  pdf-passthrough-red-seal-analysis.md  print-issues-analysis.md
docs/: plan-slot-enhancement.md
scripts/: build-all.js
src/: app.js  index.html  layout.js  ocr.js  print.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/invoice-engine/: Cargo.toml
src-tauri/invoice-engine/src/: lib.rs
src-tauri/ofd-engine/: Cargo.toml
src-tauri/ofd-engine/src/: lib.rs
src-tauri/src/: lib.rs  pdf_engine.rs  pdfium_print.rs  seh_wrapper.c
