[package]
name = "fapiao-print"
version = "1.10.3"
description = "电子发票批量打印工具"
authors = ["fapiao-print"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
ocr = ["ocr-rs"]

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico", "bmp", "tiff", "webp"] }
ab_glyph = "0.2"
printpdf = { version = "0.9", features = ["images"] }
lopdf = "0.39"
encoding_rs = "0.8"
rayon = "1.10"
kamadak-exif = "0.5"
ocr-rs = { version = "2.2", optional = true }
ofd-engine = { path = "ofd-engine" }
flate2 = "1.1.9"
tar = "0.4"
zip = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Storage_Xps",
    "Win32_Storage_Xps_Printing",
    "Data_Pdf",
    "Storage",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }


[profile.release]
opt-level = 3       # 速度优先优化（MNN推理等计算密集路径获益显著）
lto = true          # 链接时优化，消除未使用代码
strip = true        # 剥离调试符号
codegen-units = 1   # 单编译单元，更好的优化
